--- a/museum/style/style.css
+++ b/museum/style/style.css
@@ -152,7 +152,7 @@ header {
 }
 
 .header-container {
-  height: 50px;
+  height: 150px;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -163,7 +163,8 @@ header {
 }
 
 .container-logo {
-  width: 195px;
+  width: 199px;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -176,8 +177,8 @@ header {
 }
 
 .container-logo .logo-image {
-  width: 50px;
-  height: 34px;
+  width: 49px;
+  height: 26px;
 }
 
 .container-logo .logo-image img {
@@ -188,18 +189,27 @@ header {
 .container-logo .logo-title {
   font-family: "Forum Regular";
   font-size: 28px;
-  line-height: 50px;
+  line-height: 31px;
   letter-spacing: 5px;
   text-transform: uppercase;
   color: #FFFFFF;
-  margin-left: 20px;
+  margin-left: 25px;
+  margin-top: 2px;
 }
 
 .container-nav {
-  width: 770px;
+  width: 775px;
+  height: 150px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .container-nav .navigation {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -211,7 +221,7 @@ header {
 .container-nav .navigation .navigation-item {
   font-family: 'Roboto Thin';
   font-size: 22px;
-  line-height: 50px;
+  line-height: 26px;
   letter-spacing: 2px;
   color: #FFFFFF;
   cursor: pointer;
@@ -258,12 +268,10 @@ header {
   position: absolute;
   width: calc(100% - 440px);
   right: 0;
-  top: -1px;
+  top: 0;
   height: auto;
   overflow-x: clip;
   z-index: 1;
-  -webkit-box-shadow: 4px 0px 2px -2px black inset;
-          box-shadow: 4px 0px 2px -2px black inset;
 }
 
 .slider-wrap-wrap {
@@ -294,8 +302,8 @@ header {
 
 .slider-wrap-wrap .louvre-image .background-image {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: -1px;
+  left: -1px;
   bottom: 0;
   right: 0;
   background: -webkit-gradient(linear, left top, right top, from(#000000), color-stop(16.19%, rgba(0, 0, 0, 0.5)), color-stop(30.73%, rgba(0, 0, 0, 0)));
@@ -322,7 +330,7 @@ header {
 }
 
 .control .control-number {
-  width: 80px;
+  width: 76px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -339,8 +347,8 @@ header {
 }
 
 .control .control-tab {
-  width: 200px;
-  margin: 0 45px;
+  width: 180px;
+  margin: 0 60px 0 55px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -350,8 +358,8 @@ header {
 }
 
 .control .control-tab .control-tab-item {
-  width: 20px;
-  height: 20px;
+  width: 16px;
+  height: 16px;
   background: #FFFFFF;
   cursor: pointer;
 }
@@ -375,6 +383,7 @@ header {
   width: 30.27px;
   height: auto;
   cursor: pointer;
+  background: none;
 }
 
 .control .control-arrow .arrow img {
@@ -413,7 +422,7 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-family: 'Forum Regular';
+  font-family: "Forum Regular";
   font-size: 80px;
   line-height: 90px;
   letter-spacing: 5px;
@@ -425,7 +434,7 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-family: 'Roboto Light';
+  font-family: "Roboto Light";
   font-size: 28px;
   line-height: 33px;
   letter-spacing: 2px;
@@ -756,6 +765,7 @@ header {
   width: 220px;
   height: auto;
   cursor: pointer;
+  background: none;
 }
 
 .vidio-container .video-start img {
@@ -772,8 +782,8 @@ header {
 }
 
 .vidio-container .video-start:hover {
-  -webkit-filter: invert(86%) sepia(23%) saturate(698%) hue-rotate(182deg) brightness(91%) contrast(91%);
-          filter: invert(86%) sepia(23%) saturate(698%) hue-rotate(182deg) brightness(91%) contrast(91%);
+  -webkit-filter: invert(71%) sepia(0%) saturate(7%) hue-rotate(206deg) brightness(86%) contrast(86%);
+          filter: invert(71%) sepia(0%) saturate(7%) hue-rotate(206deg) brightness(86%) contrast(86%);
 }
 
 .vidio-container .adjustment {
@@ -841,9 +851,9 @@ header {
   height: auto;
 }
 
-.vidio-container .adjustment .microphone .volume {
-  -webkit-filter: invert(69%) sepia(0%) saturate(26%) hue-rotate(262deg) brightness(107%) contrast(86%);
-          filter: invert(69%) sepia(0%) saturate(26%) hue-rotate(262deg) brightness(107%) contrast(86%);
+.vidio-container .adjustment .microphone img:hover {
+  -webkit-filter: invert(71%) sepia(0%) saturate(7%) hue-rotate(206deg) brightness(86%) contrast(86%);
+          filter: invert(71%) sepia(0%) saturate(7%) hue-rotate(206deg) brightness(86%) contrast(86%);
 }
 
 .vidio-container .adjustment .volume-line {
@@ -878,9 +888,14 @@ header {
   height: auto;
 }
 
+.vidio-container .adjustment .full img:hover {
+  -webkit-filter: invert(71%) sepia(0%) saturate(7%) hue-rotate(206deg) brightness(86%) contrast(86%);
+          filter: invert(71%) sepia(0%) saturate(7%) hue-rotate(206deg) brightness(86%) contrast(86%);
+}
+
 .video-slider {
   height: auto;
-  margin-bottom: 60px;
+  margin-bottom: 63px;
 }
 
 .video-slider-wrapper {
@@ -958,7 +973,7 @@ header {
 }
 
 .picture-container {
-  height: 1980px;
+  height: 1981px;
   position: relative;
 }
 
@@ -1078,7 +1093,7 @@ header {
   display: inline-flex;
   position: relative;
   padding-left: 40px;
-  margin-bottom: 50px;
+  margin-bottom: 25px;
   cursor: pointer;
   font-size: 22px;
   -webkit-box-align: center;
@@ -1142,7 +1157,7 @@ header {
   font-size: 28px;
   line-height: 33px;
   color: #000000;
-  padding-bottom: 11px;
+  padding-bottom: 25px;
   text-align: right;
 }
 
@@ -1156,7 +1171,7 @@ header {
   -webkit-box-pack: right;
       -ms-flex-pack: right;
           justify-content: right;
-  margin-bottom: 35px;
+  margin-bottom: 10px;
 }
 
 .tickets-content__container .tickets-container__amount .amount-container h4 {
@@ -1164,7 +1179,7 @@ header {
   font-size: 22px;
   line-height: 26px;
   color: #000000;
-  padding-bottom: 14px;
+  padding-bottom: 15px;
   text-align: left;
 }
 
@@ -1180,7 +1195,7 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 0 12px;
+  padding: 0 10px;
   border: 3px solid #000000;
 }
 
@@ -1203,8 +1218,8 @@ header {
 }
 
 .tickets-content__container .tickets-container__amount .total {
-  padding-bottom: 40px;
-  padding-top: 15px;
+  padding-bottom: 35px;
+  padding-top: 40px;
   padding-left: 25px;
 }
 
@@ -1544,12 +1559,21 @@ header {
   text-align: center;
 }
 
+.booking-container__right {
+  border: #030303 1px solid;
+}
+
+.booking-container__right .booking-container__right-wrapper {
+  width: calc(100% - 60px);
+  margin: 0 auto;
+}
+
 /*------------------------------------------------------*/
 /**Parallax*/
 .parallax .parallax-conteiner {
   width: 100%;
   height: 400px;
-  background: url(../assets/images/jpg/parallax.jpg);
+  background: center no-repeat url(../assets/images/jpg/parallax.jpg);
   background-size: cover;
   background-attachment: fixed;
 }
@@ -1589,7 +1613,6 @@ header {
 }
 
 .contacts-container .contacts-content {
-  padding-top: 10px;
   max-width: 282px;
 }
 
@@ -1598,7 +1621,7 @@ header {
   font-size: 28px;
   line-height: 33px;
   color: #000000;
-  padding-bottom: 36px;
+  padding-bottom: 50px;
 }
 
 .contacts-container .contacts-content .contacts-content__subtitle {
@@ -1606,7 +1629,7 @@ header {
   font-size: 22px;
   line-height: 26px;
   color: #000000;
-  padding-bottom: 20px;
+  padding-bottom: 25px;
 }
 
 .contacts-container .contacts-content .contacts-content__subtitle:last-child {
@@ -1629,7 +1652,7 @@ footer {
 }
 
 .footer-container {
-  padding: 75px 0 50px 0;
+  padding: 75px 0 43px 0;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[2];
@@ -1651,6 +1674,26 @@ footer {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+}
+
+.main-container .container-logo {
+  margin-top: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.main-container .container-logo .logo-image {
+  width: 50px;
+  height: 34px;
+}
+
+.main-container .container-logo .logo-image img {
+  width: 100%;
+  height: auto;
 }
 
 .main-container .container-navigation {
@@ -1786,7 +1829,7 @@ footer {
   position: absolute;
   left: 0;
   right: 0;
-  bottom: 128px;
+  bottom: 125px;
   max-width: 1920px;
   height: 3px;
   background-color: #666666;
@@ -1803,13 +1846,17 @@ footer {
 }
 
 .footer-bottom-container .bottom-content p {
-  font-family: "Roboto Light";
+  font-family: "Roboto Thin";
   font-style: normal;
   font-weight: 200;
   font-size: 22px;
   line-height: 22px;
   letter-spacing: 2px;
   color: #FFFFFF;
+}
+
+.footer-bottom-container .bottom-content p:nth-child(2) {
+  margin-left: 40px;
 }
 
 /*-----------------------------------------------*/
