--- a/museum/style/style.scss
+++ b/museum/style/style.scss
@@ -128,20 +128,21 @@ header {
 }
 
 .header-container {
-    height: 50px;
+    height: 150px;
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
 .container-logo {
-    width: 195px;
+    width: 199px;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     .logo-image {
-        width: 50px;
-        height: 34px;
+        width: 49px;
+        height: 26px;
         img {
             width: 100%;
             height: auto;
@@ -150,23 +151,28 @@ header {
     .logo-title {
         font-family: $font-forum-regular;
         font-size: 28px;
-        line-height: 50px;
+        line-height: 31px;
         letter-spacing: 5px;
         text-transform: uppercase;
         color: $color2;
-        margin-left: 20px;
+        margin-left: 25px;
+        margin-top: 2px;
     }
 }
 
 .container-nav {
-    width: 770px;
+    width: 775px;
+    height: 150px;
+    display: flex;
+    align-items: center;
     .navigation {
+        width: 100%;
         display: flex;
         justify-content: space-between;
         .navigation-item {
             font-family: 'Roboto Thin';
             font-size: 22px;
-            line-height: 50px;
+            line-height: 26px;
             letter-spacing: 2px;
             color: $color2;
             cursor: pointer;
@@ -213,11 +219,10 @@ header {
     position: absolute;
     width: calc(100% - 440px);
     right: 0;
-    top: -1px;
+    top: 0;
     height: auto;
     overflow-x: clip;
     z-index: 1;
-    box-shadow: 4px 0px 2px -2px rgba(0, 0, 0, 1) inset;
 }
 
 .slider-wrap-wrap {
@@ -237,8 +242,8 @@ header {
         }
         .background-image {
             position: absolute;
-            top: 0;
-            left: 0;
+            top: -1px;
+            left: -1px;
             bottom: 0;
             right: 0;
             background: linear-gradient(90deg, #000000 0%, rgba(0, 0, 0, 0.5) 16.19%, rgba(0, 0, 0, 0) 30.73%);
@@ -258,7 +263,7 @@ header {
     align-items: center;
     justify-content: center;
     .control-number {
-        width: 80px;
+        width: 76px;
         display: flex;
         justify-content: space-between;
         font-family: 'Roboto Regular';
@@ -270,13 +275,13 @@ header {
         color: #FFFFFF;
     }
     .control-tab {
-        width: 200px;
-        margin: 0 45px;
+        width: 180px;
+        margin: 0 60px 0 55px;
         display: flex;
         justify-content: space-between;
         .control-tab-item {
-            width: 20px;
-            height: 20px;
+            width: 16px;
+            height: 16px;
             background: #FFFFFF;
             cursor: pointer;
         }
@@ -293,6 +298,7 @@ header {
             width: 30.27px;
             height: auto;
             cursor: pointer;
+            background: none;
             img {
                 width: 100%;
                 height: auto;
@@ -320,7 +326,7 @@ header {
             z-index: 15;
             .louvre-title {
                 display: flex;
-                font-family: 'Forum Regular';
+                font-family: $font-forum-regular;
                 font-size: 80px;
                 line-height: 90px;
                 letter-spacing: 5px;
@@ -329,7 +335,7 @@ header {
             }
             .louvre-subtitle {
                 display: flex;
-                font-family: 'Roboto Light';
+                font-family: $font-roboto-light;
                 font-size: 28px;
                 line-height: 33px;
                 letter-spacing: 2px;
@@ -614,6 +620,7 @@ header {
         width: 220px;
         height: auto;
         cursor: pointer;
+        background: none;
         img {
             width: 100%;
             height: auto;
@@ -627,7 +634,7 @@ header {
     }
 
     .video-start:hover {
-        filter: invert(86%) sepia(23%) saturate(698%) hue-rotate(182deg) brightness(91%) contrast(91%);
+        filter: invert(71%) sepia(0%) saturate(7%) hue-rotate(206deg) brightness(86%) contrast(86%);
     }
 
     .adjustment {
@@ -679,8 +686,8 @@ header {
                 width: 100%;
                 height: auto;
             }
-            .volume {
-                filter: invert(69%) sepia(0%) saturate(26%) hue-rotate(262deg) brightness(107%) contrast(86%);
+            img:hover {
+                filter: invert(71%) sepia(0%) saturate(7%) hue-rotate(206deg) brightness(86%) contrast(86%);
             }
         }
         .volume-line {
@@ -710,13 +717,16 @@ header {
                 width: 100%;
                 height: auto;
             }
+            img:hover {
+                filter: invert(71%) sepia(0%) saturate(7%) hue-rotate(206deg) brightness(86%) contrast(86%);
+            }
         }
     }
 }
 
 .video-slider {
     height: auto;
-    margin-bottom: 60px;
+    margin-bottom: 63px;
 }
 
 .video-slider-wrapper {
@@ -795,7 +805,7 @@ header {
 }
 
 .picture-container {
-    height: 1980px;
+    height: 1981px;
     position: relative;
     .picture-inner-container {
         height: 2900px;
@@ -894,7 +904,7 @@ header {
                 display: inline-flex;
                 position: relative;
                 padding-left: 40px;
-                margin-bottom: 50px;
+                margin-bottom: 25px;
                 cursor: pointer;
                 font-size: 22px;
                 align-items: center;
@@ -950,7 +960,7 @@ header {
             font-size: 28px;
             line-height: 33px;
             color: $color4;
-            padding-bottom: 11px;
+            padding-bottom: 25px;
             text-align: right;
         }
         .amount-container {
@@ -959,13 +969,13 @@ header {
             display: grid;
             grid-template-rows: auto auto;
             justify-content: right;
-            margin-bottom: 35px;
+            margin-bottom: 10px;
             h4 {
                 font-family: 'Roboto Light';
                 font-size: 22px;
                 line-height: 26px;
                 color: $color4;
-                padding-bottom: 14px;
+                padding-bottom: 15px;
                 text-align: left;
             }
             .amount-container__block {
@@ -974,7 +984,7 @@ header {
                 height: 50px;
                 align-items: center;
                 justify-content: space-between;
-                padding: 0 12px;
+                padding: 0 10px;
                 border: 3px solid $color4;
                 .button-amount {
                     font-family: $font-forum-regular;
@@ -995,8 +1005,8 @@ header {
             }
         }
         .total {
-            padding-bottom: 40px;
-            padding-top: 15px;
+            padding-bottom: 35px;
+            padding-top: 40px;
             padding-left: 25px;
             h4 {
                 span {
@@ -1287,6 +1297,16 @@ header {
         }
     }
 }
+
+.booking-container__right {
+    border: $color1 1px solid;
+    .booking-container__right-wrapper {
+        width: calc(100% - 60px);
+        margin: 0 auto;
+    }
+}
+
+
 /*------------------------------------------------------*/
 
 /**Parallax*/
@@ -1295,7 +1315,7 @@ header {
     .parallax-conteiner {
         width: 100%;
         height: 400px;
-        background: url(../assets/images/jpg/parallax.jpg);
+        background: center no-repeat url(../assets/images/jpg/parallax.jpg);
         background-size: cover;
         background-attachment: fixed;
     }
@@ -1332,21 +1352,20 @@ header {
     display: flex;
     justify-content: space-between;
     .contacts-content {
-        padding-top: 10px;
         max-width: 282px;
         .contacts-content__title {
             font-family: $font-roboto-medium;
             font-size: 28px;
             line-height: 33px;
             color: $color4;
-            padding-bottom: 36px;
+            padding-bottom: 50px;
         }
         .contacts-content__subtitle {
             font-family: 'Roboto Light';
             font-size: 22px;
             line-height: 26px;
             color: #000000;
-            padding-bottom: 20px;
+            padding-bottom: 25px;
         }
         .contacts-content__subtitle:last-child {
             padding: 0;
@@ -1370,7 +1389,7 @@ footer {
 }
 
 .footer-container {
-    padding: 75px 0 50px 0;
+    padding: 75px 0 43px 0;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
@@ -1384,6 +1403,19 @@ footer {
     grid-template-columns: auto 380px;
     justify-content: space-between;
     align-items: flex-start;
+    .container-logo {
+        margin-top: 8px;
+        display: flex;
+        align-items: flex-start;
+        .logo-image {
+            width: 50px;
+            height: 34px;
+            img {
+                width: 100%;
+                height: auto;
+            }
+        }
+    }
     .container-navigation {
         margin-right: 14px;
         .navigation-container {
@@ -1471,7 +1503,7 @@ footer {
     position: absolute;
     left: 0;
     right: 0;
-    bottom: 128px; 
+    bottom: 125px; 
     max-width: 1920px;
     height: 3px;
     background-color: $color8;
@@ -1483,13 +1515,16 @@ footer {
         display: flex;
         justify-content: space-between;
         p {
-            font-family: $font-roboto-light;
+            font-family: $font-roboto-thin;
             font-style: normal;
             font-weight: 200;
             font-size: 22px;
             line-height: 22px;
             letter-spacing: 2px;
             color: $color2;
+        }
+        p:nth-child(2) {
+            margin-left: 40px;
         }
     }
 }
