--- a/museum/style/style.css
+++ b/museum/style/style.css
@@ -1274,6 +1274,7 @@ header {
 }
 
 .booking-container {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1285,6 +1286,19 @@ header {
   -webkit-column-gap: 40px;
           column-gap: 40px;
   margin: 0 auto;
+}
+
+.close {
+  position: absolute;
+  right: -180px;
+  top: -56px;
+  width: 25px;
+  height: 25px;
+}
+
+.close img {
+  width: 100%;
+  height: auto;
 }
 
 .booking-container__left .left-container__header .logo {
@@ -1345,7 +1359,14 @@ header {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  background: bottom 14px right 15px/17px 17px no-repeat url(../assets/images/svg/booking-tickets/arrow.svg);
+}
+
+.booking-container__left .left-form .item-data .data-container input::-webkit-calendar-picker-indicator {
+  width: 190px;
+  height: 45px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background: bottom 16px right 15px/17px 17px no-repeat url(../assets/images/svg/booking-tickets/arrow.svg);
 }
 
 .booking-container__left .left-form .item-data .data-container .img {
@@ -1365,6 +1386,7 @@ header {
 }
 
 .booking-container__left .left-form .item-data .data-container .text {
+  width: 50px;
   position: absolute;
   top: 13px;
   left: 45px;
@@ -1560,12 +1582,384 @@ header {
 }
 
 .booking-container__right {
+  width: 530px;
   border: #030303 1px solid;
 }
 
 .booking-container__right .booking-container__right-wrapper {
   width: calc(100% - 60px);
   margin: 0 auto;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 470px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 25px 0 22px 0;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item__top .item-top-main {
+  width: 196px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item__top .item-top-main h3 {
+  font-family: "Roboto Medium";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 37px;
+  color: #272727;
+  margin-bottom: 2px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item__top .item-top-main .subtitle {
+  font-family: "Roboto Medium";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 26px;
+  color: #740C11;
+  opacity: 0.9;
+  margin-bottom: 10px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item__top .item-top-main .subtitle-item {
+  width: 100%;
+  height: auto;
+  font-family: "Roboto Light";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 21px;
+  color: #030303;
+  padding-left: 30px;
+  margin-bottom: 5px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item__top .item-top-main .subtitle-item:last-child {
+  margin: 0;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item__top .item-top-main .item1 {
+  background: top 1.5px left 0/15px 15px no-repeat url(../assets/images/svg/booking-tickets/date.svg);
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item__top .item-top-main .item2 {
+  background: top 1.5px left 0/15px 15px no-repeat url(../assets/images/svg/booking-tickets/time.svg);
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item__top .item-top-main .item3 {
+  background: top 1.5px left 0/15px 15px no-repeat url(../assets/images/svg/booking-tickets/gill.svg);
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item__top .item-top-img {
+  width: 150px;
+  height: 120px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item__top .item-top-img img {
+  width: 100%;
+  height: auto;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-middle .middle-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-middle .middle-item .item-basic {
+  width: 160px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-middle .middle-item .item-basic .basic-bg {
+  width: 32px;
+  height: 20px;
+  background: #030303;
+  border-radius: 5px;
+  font-family: "Roboto Medium";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 21px;
+  color: #A4A4A3;
+  margin-right: 10px;
+  text-align: center;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-middle .middle-item .item-basic .basic-text {
+  font-family: "Roboto Light";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 26px;
+  color: #030303;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-middle .middle-item .basic2 {
+  width: 165px;
+  margin-top: 5px;
+  margin-bottom: 9px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-middle .middle-item .item-basic-cost {
+  font-family: "Roboto Light";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 26px;
+  color: #030303;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-middle .line {
+  width: 100%;
+  height: 2px;
+  background: #740C11;
+  margin-bottom: 10px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-middle .bottom-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-middle .bottom-item .total-text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 32px;
+  line-height: 37px;
+  color: #030303;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-middle .bottom-item .item1 {
+  font-family: "Roboto Medium";
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-middle .bottom-item .item2 {
+  font-family: "Roboto Bold";
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom {
+  height: 312px;
+  margin-bottom: 26px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  height: 241px;
+  margin-bottom: 26px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-end {
+  width: 360px;
+  height: 211px;
+  background: #939393;
+  border-radius: 3px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-end .card-bg {
+  height: 45px;
+  background: #161615;
+  margin-top: 25px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-end .card-end-bottom {
+  width: 100%;
+  height: 141px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-end .card-end-bottom .card-end-text {
+  width: 75px;
+  height: 111px;
+  margin-right: 20px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-end .card-end-bottom .card-end-text label {
+  font-family: "Roboto Medium";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  color: #161615;
+  padding-left: 10px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-end .card-end-bottom .card-end-text #cvc {
+  width: 75px;
+  height: 35px;
+  margin-top: 5px;
+  margin-bottom: 6px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-end .card-end-bottom .card-end-text .card-end-item-text {
+  width: 55px;
+  font-family: "Roboto Medium";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 10px;
+  line-height: 12px;
+  color: #161615;
+  margin-left: 10px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-start {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 360px;
+  height: 211px;
+  background: #BCBCBC;
+  border-radius: 3px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-start .booking-card-start-wrapper {
+  width: calc(100% - 40px);
+  margin: 0 auto;
+  padding: 15px 0;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-start .card-number {
+  display: block;
+  font-family: "Roboto Medium";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  color: #161615;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-start #card-number {
+  display: block;
+  margin: 5px 0 10px 0;
+  width: 215px;
+  height: 35px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-start .month-year {
+  width: 100px;
+  height: 35px;
+  padding-left: 10px;
+  margin-top: 5px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-start .month-year::-webkit-outer-spin-button,
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-start .month-year::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  background: #FFF url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQYQAAAAKUlEQVQYlWNgwAT/sYhhKPiPT+F/LJgEsHv37v+EMGkmkuImoh2NoQAANlcun/q4OoYAAAAASUVORK5CYII=) no-repeat center center;
+  width: 28px;
+  border-left: 1px solid #BBB;
+  opacity: .5;
+  /* shows Spin Buttons per default (Chrome >= 39) */
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-start .month-year-right {
+  margin-left: 12px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-start .bottom-text {
+  margin: 10px 0 5px 0;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-start #surname {
+  display: block;
+  width: 320px;
+  height: 35px;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-start .visa {
+  position: absolute;
+  top: 34px;
+  right: 20px;
+  width: 55px;
+  height: auto;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-start .visa img {
+  width: 100%;
+  height: auto;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-start .mastercard {
+  position: absolute;
+  top: 65px;
+  right: 20px;
+  width: 53px;
+  height: auto;
+}
+
+.booking-container__right .booking-container__right-wrapper .booking-item-bottom .booking-card-wrapper .booking-card-start .mastercard img {
+  width: 100%;
+  height: auto;
+}
+
+.booking-container__right .booking-container__right-wrapper .book-submit {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.booking-container__right .booking-container__right-wrapper .book-submit input {
+  width: 220px;
+  height: 45px;
+  background: #710707;
+  opacity: 0.9;
+  font-family: "Roboto Light";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 26px;
+  color: #FFFFFF;
+  letter-spacing: 2px;
+  cursor: pointer;
 }
 
 /*------------------------------------------------------*/
